--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+
     <header>
         <h1>Destinations</h1>
-    </header>
+    <header>
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="florida">
